# backend.drweb

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.py  wsgi.py
.github/workflows/: run_tests.yaml
app/: api_instance.py  app.py  initialize_functions.py
app/config/: config.py
app/db/: __init__.py  file.py  user.py
app/middlewares/: log.py
app/modules/: decorator_utils.py
app/modules/auth/: decorators.py  service.py
app/modules/files/: route.py  service.py
app/modules/user/: route.py
app/tests/: conftest.py
app/tests/tests_routes/: test_files_route.py  test_users_route.py
